# odoo-dev-environment

./: .gitignore  Dockerfile.template  LICENSE  README.md  build-docker.sh  build-modules.json.example  create-module.sh  docker-compose.yml  docker-entrypoint.sh  modules.json.example  odoo-dev.sh  pyproject.toml  pyrightconfig.json  start.sh
docker-build/: Dockerfile  build.sh  modules_to_install.txt
