[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "odoo-project"
version = "0.1.0"
description = "Modulo Odoo personalizzato"
authors = ["Mauro Cerone <mauro.cerone@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

# versione di Python richiesta
[tool.poetry.dependencies]
python = "^3.12"
phonenumbers = "^8.13"

# dipendenze di sviluppo
[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"       # linter moderno

[tool.ruff]
line-length = 88
exclude = [
    "odoo/**",
    ".venv/**",
]

[tool.ruff.lint]
select = ["E", "F", "I"]  # E,F=Pyflakes, I=isort
ignore = [
    "F401",  # Imported but unused (comune in Odoo)
    "F811",  # Redefined while unused (comune in Odoo)
]

[tool.ruff.lint.isort]
known-first-party = ["odoo"]
known-third-party = ["psycopg2", "werkzeug", "lxml"]

# Formatting
[tool.ruff.format]
quote-style = "double"
indent-style = "space"